# adan-id-opencloud

./: .env.example  README.md  app.py  arequirements.txt  docker-compose.yml  noor-e-abjad-notebook.ipynb  package.json  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: adanid-ecosystem.yml
api/gateway/: Dockerfile
auth/: Dockerfile  abjad-jwt.js  biometric-idp.js  package.json
config/: quranflow_config.json
demos/: README.md  app.py
docs/: CLOUD_ARCHITECTURE.md  deployment-log-2026-04-23.md  storage_policy.md
models/: mergekit-multimodal-islamic.yaml  mergekit-multimodal.yaml  mergekit-nooreabjad-enhanced.yaml  mergekit-quranlab-ai.yaml  mergekit-universal.yaml  mergekit.yaml
models/islamic-ai-foundation/: README.md  config.json
models/multimodal-quranlab/: README.md
models/quranlab/: README.md
models/quranlab-ai/: README.md
monitoring/: loki-config.yaml  prometheus.yml
nginx/: Dockerfile  cloud.conf
notebooks/: multimodal-quranlab-demo.ipynb  quranlab-ai-complete-demo.ipynb  quranlab-ai-demo.ipynb  universal-islamic-ai-demo.ipynb
offline/: offline_config.json
projects/quranlab/: README.md
scripts/: colab_dataset_update.py  migrate_models.py  setup_offline.sh  train_universal.py  upload_dataset_colab.py  upload_to_hf.py
security/: abjad-entropy.js  vault.js  zero-trust-middleware.js
services/: offline_router.py
spaces/quranlab-demo/: app.py
src/: ai_engine.py  main.py
src/core/: abjad_calculator.py  voice_processor.py
storage/: Dockerfile
tools/: upload_quranlab.py
tools/database/: supabase_schema.sql
(+12 files in other folders)
